--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Ceech's Javascript Stop Watch</title>
+    <title>Ceech's Javascript Stopwatch</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <h1>Javascript Stopwatch</h1>
+      <div class="clock">
+        <div class="m2">M</div>
+        <div class="m1">M</div>
+        <div class="divider">:</div>
+        <div class="s2">S</div>
+        <div class="s1">S</div>
+        <div class="divider">:</div>
+        <div class="d2">D</div>
+        <div class="d1">D</div>
+      </div>
+      <div class="controls">
+        <button>Start</button>
+        <button>Stop</button>
+        <button>Reset</button>
+      </div>
+    </div>
   </body>
 </html>
