--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         <div class="d1">D</div>
       </div>
       <div class="controls">
-        <button>Start</button>
-        <button>Stop</button>
-        <button>Reset</button>
+        <button class="start">Start</button>
+        <button class="stop">Stop</button>
+        <button class="reset">Reset</button>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
