rid of hh mm ss

--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
   <body>
     <div class="container">
       <h1>Javascript Stopwatch</h1>
-      <div class="clock">
-        <div class="m2">M</div>
-        <div class="m1">M</div>
-        <div class="divider">:</div>
-        <div class="s2">S</div>
-        <div class="s1">S</div>
-        <div class="divider">:</div>
-        <div class="d2">D</div>
-        <div class="d1">D</div>
-      </div>
+      <div class="clock"></div>
       <div class="controls">
         <button class="start">Start</button>
         <button class="stop">Stop</button>
